:bug: 修改读取配置相关bug

--- a/config/config.ini
+++ b/config/config.ini
@@ -4,8 +4,9 @@ HttpPort = :9090
 
 [database]
 Db = mysql
-DbHOst = localhost
+DbHost = localhost
 DbPort = 3306
+DbUser = root
 DbPassword = mysqlpassword
 DbName = app
 
