:bug: 修改命令错误导致的redis配置读取失败

--- a/config/config.ini
+++ b/config/config.ini
@@ -13,7 +13,7 @@ DbName = app
 [redis]
 RdHost = localhost
 RdPort = 6379
-RdPassword = 2562
+RdPassword = redispassword
 
 [admin]
 Username = admin
