:construction: 修改基本配置

--- a/config/config.ini
+++ b/config/config.ini
@@ -4,16 +4,16 @@ HttpPort = :9090
 
 [database]
 Db = mysql
-DbHost = localhost
+DbHost = app_upgrade_mysql
 DbPort = 3306
 DbUser = root
 DbPassword = mysqlpassword
 DbName = app
 
 [redis]
-RdHost = localhost
+RdHost = app_upgrade_redis
 RdPort = 6379
-RdPassword = redispassword
+RdPassword = TXoLQu!29L7ABclKJ
 
 [admin]
 Username = admin
