--- a/config/config.ini
+++ b/config/config.ini
@@ -4,16 +4,16 @@ HttpPort = :9090
 
 [database]
 Db = mysql
-DbHost = app_upgrade_mysql
+DbHost = localhost
 DbPort = 3306
 DbUser = root
 DbPassword = mysqlpassword
 DbName = app
 
 [redis]
-RdHost = app_upgrade_redis
+RdHost = localhost
 RdPort = 6379
-RdPassword = TXoLQu!29L7ABclKJ
+RdPassword = redispassword
 
 [admin]
 Username = admin
