:bug: 修改部署文件的小错误

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - app_upgrade_redis
     build:
       context: ..
-      dockerfile: deploy/Dockerfile_test
+      dockerfile: deploy/Dockerfile
     restart: always
     ports:
       - "9090:9090"
