--- a/config/config_test.ini
+++ b/config/config_test.ini
@@ -14,6 +14,7 @@ DbName = app
 RdHost = localhost
 RdPort = 6379
 RdPassword = redispassword
+ExpireTime = 43200000000000
 
 [admin]
 Username = admin
