:wrench: 修改配置文件，切换为生产环境

--- a/config/config.ini
+++ b/config/config.ini
@@ -14,6 +14,7 @@ DbName = app
 RdHost = app_upgrade_redis
 RdPort = 6379
 RdPassword = TXoLQu!29L7ABclKJ
+ExpireTime = 43200000000000
 
 [admin]
 Username = admin
